welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: not found: value liMessage
if (liMessage() == 'R' ) {droite();avance()}
    ^BDRBuggle:5: error: not found: value liMessage
	else { if (liMessage() == 'L') { gauche(); avance()}
                   ^BDRBuggle:6: error: not found: value liMessage
		else { if (liMessage() == 'I' ) {droite();droite();avnce()}
                           ^BDRBuggle:6: error: not found: value avnce
		else { if (liMessage() == 'I' ) {droite();droite();avnce()}
                                                                   ^BDRBuggle:7: error: not found: value liMessage
			else { if (liMessage() == 'A' ) {avance()}
                                   ^BDRBuggle:8: error: not found: value liMessage
				else { if (liMessage() == 'B' ) {avance();avance()}
                                           ^BDRBuggle:9: error: not found: value liMessage
					else { if (liMessage() == 'C' ) { avance();avance();avance()}
                                                   ^BDRBuggle:10: error: not found: value liMessage
						else { if (liMessage() == 'Z' ) { recule()}
                                                           ^BDRBuggle:11: error: not found: value liMessage
							else { if (liMessage() == 'Y' ) { recule();recule()}
                                                                   ^BDRBuggle:12: error: not found: value liMessage
								else { if (liMessage() == 'X' ) {recule();recule();recule()}}}}}}}}}
                                                                           ^