welcome.lessons.welcome.bdr.BDR.scala.code
while (estSurMessage) {

if (liMessage() == 'R' ) {droite();avance()}
	else { if (liMessage() == 'L') { gauche(); avance()}
		else { if (liMessage() == 'I' ) {droite();droite();avnce()}
			else { if (liMessage() == 'A' ) {avance()}
				else { if (liMessage() == 'B' ) {avance();avance()}
					else { if (liMessage() == 'C' ) { avance();avance();avance()}
						else { if (liMessage() == 'Z' ) { recule()}
							else { if (liMessage() == 'Y' ) { recule();recule()}
								else { if (liMessage() == 'X' ) {recule();recule();recule()}}}}}}}}}
}